--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,6 @@ header {
 header.sticky {
   position: fixed;
   background: #fff;
-  box-shadow: .0.5rem 1rem rgba(0, 0, 0, 0.1);
 }
 header nav.nav.active {
   top: 60px;
@@ -163,6 +162,20 @@ nav.nav.active {
      display: flex;
      justify-content: center;
      align-items: center;
+     flex-wrap: wrap;
+}
+.works-btn .work-btn {
+  margin: 10px;
+  padding: 6px 45px;
+  font-size: 20px;
+  width: 238px;
+  gap: 10px;
+  background: #3087E6;
+}
+.works-btn .two {
+   background: none;
+   color:  #3087E6;
+   border: 2px solid;
 }
 .about {
   background: linear-gradient(118.57deg, #3087E6 8.89%, #FE4A49 107.28%);
@@ -217,6 +230,9 @@ color: #FFFFFF;
 .media-links {
    margin-top: 20px;
 }
+.media-links li a {
+   text-decoration: none;
+}
 .media-links li, a {
   font-family: 'Helvetica';
   font-style: normal;
@@ -226,6 +242,7 @@ color: #FFFFFF;
   /* or 133% */
   color: #FFFFFF;
   list-style: none;
+
 }
 .media-links a {
    text-decoration: underline;
@@ -283,6 +300,7 @@ color: #FFFFFF;
   color: #3087E6;
  }
  .demo {
+  margin-top: 50px;
   background: #E6E6EA;
   padding: 50px;
   display: flex;
@@ -318,7 +336,8 @@ text-align: center;
 color: #000000;
  }
  .footer {
-   background: #3087E6;
+   background: url(../img/footer\ with\ pattern.svg) no-repeat;
+   background-size: cover;
    padding: 50px;
    margin-top: 100px;
  }
@@ -353,6 +372,95 @@ line-height: 24px;
 
 width: 158px;
 color: #FFFFFF;
+ }
+ .testi-row {
+   margin-top: 50px;
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: center;
+   align-items: center;
+ }
+ .testi-text h1 {
+  font-family: 'Helvetica';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 34px;
+  /* or 142% */
+  
+  text-align: center;
+  
+  color: #3087E6;
+ }
+ .testi-text p {
+  width: 320px;
+  font-family: 'Helvetica';
+font-style: normal;
+font-weight: 400;
+font-size: 14px;
+line-height: 28px;
+/* or 200% */
+
+text-align: center;
+
+color: #000000;
+ }
+ .testi-bx-container {
+  width: 238px;
+  height: 280px;
+  background: #3087E6;
+  margin: 20px;
+  padding: 20px;
+ }
+ .testi-bx-container p {
+  width: 190.6px;
+  margin-top: 20px;
+  font-family: 'Helvetica';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16.4551px;
+  line-height: 27px;
+  /* or 167% */
+  color: #FFFFFF;
+ }
+ .testi-bx-txt {
+   margin-top: 30px;
+ }
+ .testi-bx-txt h1 {
+  font-family: 'Helvetica';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 27px;
+  /* or 171% */
+  color: #FFFFFF;
+ }
+ .testi-bx-txt small {
+    font-family: 'Helvetica';
+font-style: normal;
+font-weight: 400;
+font-size: 8px;
+/* or 343% */
+color: #FFFFFF;
+ }
+
+ @media screen and (min-width: 700px) {
+  .testi-row {
+    flex-direction: row;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+  }
+  .testi-text {
+     margin-left: 20px;
+  }
+  .testi-text h1 ,
+  .testi-text p {
+     text-align: center;
+  }
+  .testi-bx {
+     display: flex;
+  }
  }
 
 @media screen and (min-width: 991px) {
@@ -430,10 +538,20 @@ color: #FFFFFF;
      align-content: center;
      margin-top: 20px;
 }
-.works-btn .row-1-btn{
-     margin: 0px;
-
- }
+.works-btn .work-btn {
+  margin: 20px;
+  padding: 6px 83px;
+  width: 521px;
+  gap: 10px;
+  font-size: 36px;
+  background: #3087E6;
+}
+.works-btn .two {
+   background: none;
+   color:  #3087E6;
+   border: 2px solid;
+}
+ 
  .img-div {
   position: relative;
 }
@@ -511,9 +629,36 @@ line-height: 90px;
   line-height: 60px;
   width: 784px;
  }
- 
-
+  .testi-row {
+    flex-direction: row;
+    justify-content: left;
+    align-content: left;
+    align-items: left;
+  }
+  .testi-text {
+    margin-left: 50px;
+  }
+  .testi-bx {
+    display: flex;
+    flex-wrap: nowrap;
+  }
+  .testi-text h1 {
+   width: 521px;
+   text-align: left;
+   font-weight: 700;
+   font-size: 60px;
+   line-height: 90px;
+  }
+  .testi-text p {
+   width: 477px;
+   text-align: left;
+   font-size: 36px;
+   line-height: 60px;
+  }
 }
+
+
+ 
 
 @media screen and (min-width: 1260px) {
    .about-text {
@@ -533,5 +678,5 @@ line-height: 90px;
     overflow: hidden;
     left:1100.66px;
    }
-   
-} 
+  }
+  
